# Photo_cluster

./: .env.example  .gitignore  FREE-DEPLOYMENT.md  README.md  RENDER-DEPLOYMENT.md  deploy-guide.md  docker-compose.prod.yml  docker-compose.yml  process_remote_db.py  railway.json  render.yaml  simple_db_upload.py  upload_to_render.py  vercel.json
.claude/: settings.local.json
.kiro/specs/personal-event-photo-gallery/: design.md  requirements.md  tasks.md
backend/: .env.production  Dockerfile  Dockerfile.prod  alembic.ini  complete_fresh_process_fixed.py  copy_images.py  create_face_thumbnails.py  fix_missing_images.py  monitor_progress.py  pyproject.toml  rebuild_face_detections.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  db_utils.py  dependencies.py  error_handlers.py  exceptions.py  main.py  middleware.py  models.py  schemas.py
backend/app/routers/: persons.py  photos.py
backend/tests/: test_main.py  test_models.py  test_routers.py
docs/: DEPLOYMENT.md
frontend/: .env.production  Dockerfile.prod  nginx.conf  package.json
frontend/public/: index.html  sw.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  ErrorMessage.tsx  GalleryHomepage.tsx  Header.tsx  LoadingSpinner.tsx  PersonGallery.tsx  PhotoGrid.tsx  PhotoViewer.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useApi.ts  useErrorHandler.ts  useImagePreloader.ts  useInfiniteScroll.ts
nginx/: nginx.conf
scripts/: deploy.sh  process_photos.bat
(+5 files in other folders)
